- Updated the angle SVG to be a more simplified, angular wave. - Updated the header component SCSS to fix issues with the title/version   displaying incorrectly on mobile devices.

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -78,7 +78,7 @@
 
     a
         margin-right: .5rem
-        font-size: 1.75rem
+        font-size: 1.5rem
         font-weight: bold
         text-decoration: none
         color: $white
@@ -89,6 +89,7 @@
 
     p
         margin-bottom: 0
+        font-size: 1rem
         opacity: .8
 
 .header__nav-toggle
@@ -150,6 +151,13 @@
 
     .header__brand
         width: auto
+
+    .header__title-version
+        a
+            font-size: 1.75rem
+
+        p
+            font-size: 1.25rem
 
     .header__nav-toggle
         display: none
